--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -1,42 +1,335 @@
-#root {
-  max-width: 1280px;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100vw;
+  display: block;
+  background-color: #fff;
+  background-image: url(https://media.istockphoto.com/id/1952368018/ko/%EC%82%AC%EC%A7%84/%EC%95%84%EB%A6%84%EB%8B%A4%EC%9A%B4-%EC%97%AC%EB%A6%84%EB%82%A0%EC%97%90-%ED%9D%B0-%EA%B5%AC%EB%A6%84%EC%9D%B4-%EC%9E%88%EB%8A%94-%EC%83%9D%EC%83%9D%ED%95%9C-%ED%91%B8%EB%A5%B8-%ED%95%98%EB%8A%98.jpg?s=2048x2048&w=is&k=20&c=t75oo86l7mbh6g80fG7N8l4Lb004bFZEIANesNuSRH4=);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+body .container {
+  margin: 0 auto;
+  height: 100vh;
+  width: 90vw;
+}
+body .container .header {
+  width: 100%;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+body .container .header p {
+  font-size: 25px;
+  font-style: bold;
+  line-height: 60px;
+  margin-left: 50px;
+}
+body .container .main {
+  width: 100%;
+  height: calc(100vh - 60px);
+  display: flex;
+}
+body .container .main .firstSection {
+  width: 15%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+body .container .main .firstSection .a1 {
+  width: 90%;
+  height: 30%;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 20px;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+body .container .main .firstSection .a {
+  width: 90%;
+  height: 30%;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 20px;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+body .container .main .secondSection {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+body .container .main .secondSection .b1 {
+  width: 90%;
+  height: 63%;
+  margin: 0 auto;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+body .container .main .secondSection .b2 {
+  width: 90%;
+  margin: 0 auto;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+  height: 30%;
+}
+body .container .main .thirdSection {
+  width: 45%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+body .container .main .thirdSection .c {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  justify-content: space-between;
+}
+body .container .main .thirdSection .c .c2-1 {
+  width: 32%;
+  background-color: black;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+body .container .main .thirdSection .c1 {
+  width: 100%;
+  height: 30%;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
+}
+body .container .main .thirdSection .c2 {
+  width: 100%;
+  height: 30%;
+  border-radius: 20px;
+  background: none;
+  box-shadow: 5px 5px 10px #4f7a98;
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 1280px) {
+  body {
+    margin: 0 auto;
+    width: 100vw;
+    display: block;
+    background-color: #fff;
+    background-image: url(https://media.istockphoto.com/id/1952368018/ko/%EC%82%AC%EC%A7%84/%EC%95%84%EB%A6%84%EB%8B%A4%EC%9A%B4-%EC%97%AC%EB%A6%84%EB%82%A0%EC%97%90-%ED%9D%B0-%EA%B5%AC%EB%A6%84%EC%9D%B4-%EC%9E%88%EB%8A%94-%EC%83%9D%EC%83%9D%ED%95%9C-%ED%91%B8%EB%A5%B8-%ED%95%98%EB%8A%98.jpg?s=2048x2048&w=is&k=20&c=t75oo86l7mbh6g80fG7N8l4Lb004bFZEIANesNuSRH4=);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-  to {
-    transform: rotate(360deg);
+  body .container {
+    margin: 0 auto;
+    height: 100vh;
+    width: 90vw;
+  }
+  body .container .header {
+    width: 100%;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  body .container .header p {
+    font-size: 25px;
+    font-style: bold;
+    line-height: 60px;
+    margin-left: 50px;
+  }
+  body .container .main {
+    width: 100%;
+    height: calc(100% - 60px);
+    display: flex;
+  }
+  body .container .main .firstSection {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  body .container .main .firstSection .a1 {
+    width: 100%;
+    height: 30%;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 20px;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  body .container .main .firstSection .a {
+    width: 100%;
+    height: 30%;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 20px;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  body .container .main .secondSection {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  body .container .main .secondSection .b1 {
+    width: 90%;
+    height: 63%;
+    margin: 0 auto;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  body .container .main .secondSection .b2 {
+    width: 90%;
+    margin: 0 auto;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+    height: 30%;
+  }
+  body .container .main .thirdSection {
+    width: 45%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  body .container .main .thirdSection .c {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: space-between;
+  }
+  body .container .main .thirdSection .c .c2-1 {
+    width: 32%;
+    background-color: black;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  body .container .main .thirdSection .c1 {
+    width: 100%;
+    height: 40%;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  body .container .main .thirdSection .c2 {
+    width: 100%;
+    height: 30%;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (max-width: 720px) {
+  .container {
+    margin: 0 auto;
+    height: 100vh;
+    width: 90vw;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+  .container .header {
+    width: 100%;
+    height: 60px;
+    background-color: #fff;
+    text-align: center;
+  }
+  .container .main {
+    width: 100%;
+    height: calc(100% - 60px);
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .container .main .firstSection {
+    width: 100% !important;
+    height: 300px !important;
+  }
+  .container .main .firstSection .a1 {
+    width: 100% !important;
+    height: 50px !important;
+    background-color: #fff;
+    border-radius: 20px;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  .container .main .firstSection .a {
+    width: 46% !important;
+    height: 200px !important;
+    background-color: #fff;
+    border-radius: 20px;
+    border-radius: 20px;
+    background: none;
+    box-shadow: 5px 5px 10px #4f7a98;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+  }
+  .container .main .secondSection {
+    width: 100% !important;
+    height: 500px !important;
+  }
+  .container .main .secondSection .b1 {
+    width: 100vw !important;
+  }
+  .container .main .secondSection .b2 {
+    width: 100vw !important;
+  }
+  .container .main .thirdSection {
+    width: 100% !important;
+  }
+  .container .main .thirdSection .c {
+    height: 150px !important;
+  }
+}/*# sourceMappingURL=App.css.map */
