--- a/weatherProject/src/App.scss
+++ b/weatherProject/src/App.scss
@@ -10,19 +10,26 @@
     backdrop-filter: blur(15px);
 }
 
+html {}
+
 body {
     margin: 0 auto;
-    width: 100vw;
+    width: 99vw;
+    height: 100%;
     display: block;
     background-color: #fff;
-    background-image: url(https://media.istockphoto.com/id/1952368018/ko/%EC%82%AC%EC%A7%84/%EC%95%84%EB%A6%84%EB%8B%A4%EC%9A%B4-%EC%97%AC%EB%A6%84%EB%82%A0%EC%97%90-%ED%9D%B0-%EA%B5%AC%EB%A6%84%EC%9D%B4-%EC%9E%88%EB%8A%94-%EC%83%9D%EC%83%9D%ED%95%9C-%ED%91%B8%EB%A5%B8-%ED%95%98%EB%8A%98.jpg?s=2048x2048&w=is&k=20&c=t75oo86l7mbh6g80fG7N8l4Lb004bFZEIANesNuSRH4=);
+    background-image: url(https://cdn.pixabay.com/photo/2018/03/12/14/34/blue-3219787_1280.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
+
+
     .container {
         margin: 0 auto;
-        height: 100vh;
+        height: 900px;
         width: 90vw;
+        padding-top: 20px;
+        box-sizing: border-box;
 
         .header {
             width: 100%;
@@ -45,22 +52,70 @@ body {
 
             .firstSection {
                 width: 15%;
-                height: 100%;
+                height: 95%;
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
 
-                .a1 {
-                    width: 90%;
-                    height: 30%;
+                .selectTime {
+                    width: 100%;
+                    height: 15%;
                     margin: 0 auto;
                     background-color: #fff;
                     border-radius: 20px;
                     @include backblur();
+                    box-sizing: border-box;
+                    padding: 20px;
+
+                    .selectValuebox {
+                        width: 100px;
+                        display: flex;
+                        text-align: center;
+                        margin: auto;
+
+                        .selectValue {
+                            text-align: right;
+                            width: 100px;
+                            border-radius: 30px;
+
+
+                        }
+                    }
+
+
                 }
 
-                .a {
-                    width: 90%;
+                .realtimeWeatherArea {
+                    width: 100%;
+                    height: 45%;
+                    margin: 0 auto;
+                    background-color: #fff;
+                    border-radius: 20px;
+                    @include backblur();
+                    padding: 20px;
+                    box-sizing: border-box;
+
+                    .realtimeWeather {
+                        text-align: center;
+                        font-size: 14px;
+
+                        ul {
+                            list-style: none;
+                            margin-top: 20px;
+
+                            li {
+                                line-height: 250%;
+                                text-align: right;
+                            }
+
+                        }
+                    }
+
+
+                }
+
+                .a1 {
+                    width: 100%;
                     height: 30%;
                     margin: 0 auto;
                     background-color: #fff;
@@ -73,7 +128,7 @@ body {
 
             .secondSection {
                 width: 40%;
-                height: 100%;
+                height: 95%;
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
@@ -88,16 +143,18 @@ body {
                 .b2 {
                     width: 90%;
                     margin: 0 auto;
-
                     @include backblur();
                     height: 30%;
+
+
+
 
                 }
             }
 
             .thirdSection {
                 width: 45%;
-                height: 100%;
+                height: 95%;
                 // background-color: #3f1d1d;
                 display: flex;
                 flex-wrap: wrap;
@@ -141,7 +198,7 @@ body {
         width: 100vw;
         display: block;
         background-color: #fff;
-        background-image: url(https://media.istockphoto.com/id/1952368018/ko/%EC%82%AC%EC%A7%84/%EC%95%84%EB%A6%84%EB%8B%A4%EC%9A%B4-%EC%97%AC%EB%A6%84%EB%82%A0%EC%97%90-%ED%9D%B0-%EA%B5%AC%EB%A6%84%EC%9D%B4-%EC%9E%88%EB%8A%94-%EC%83%9D%EC%83%9D%ED%95%9C-%ED%91%B8%EB%A5%B8-%ED%95%98%EB%8A%98.jpg?s=2048x2048&w=is&k=20&c=t75oo86l7mbh6g80fG7N8l4Lb004bFZEIANesNuSRH4=);
+        background-image: url();
         background-repeat: no-repeat;
         background-size: cover;
 
