--- a/weatherProject/src/App.scss
+++ b/weatherProject/src/App.scss
@@ -148,7 +148,7 @@ body {
                         width: 25vw;
                         height: 100%;
 
-                        .koreamap:hover {
+                        .koreaMap:hover {
 
                             fill: #06ab7c;
                             cursor: pointer;
