--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -170,6 +170,7 @@ body .container .main .secondSection .b1 {
   margin: 0 auto;
   background-color: #303136;
   border-radius: 20px;
+  background-color: #1C1B20;
   overflow: hidden;
   opacity: 90%;
 }
@@ -178,8 +179,8 @@ body .container .main .secondSection .b1 .map {
   height: 100%;
 }
 body .container .main .secondSection .b1 .map .koreaMap {
-  stroke: rgb(87, 84, 84);
-  fill: #cfcdc6;
+  stroke: rgb(159, 255, 171);
+  fill: #ffffff;
 }
 body .container .main .secondSection .b1 .map .koreaMap:hover {
   fill: #06ab7c;
@@ -201,7 +202,7 @@ body .container .main .thirdSection {
 }
 body .container .main .thirdSection .c {
   width: 100%;
-  height: 30%;
+  height: 13vw;
   display: flex;
   justify-content: space-between;
 }
@@ -211,11 +212,45 @@ body .container .main .thirdSection .c .c2-1 {
   background-color: #303136;
   border-radius: 20px;
 }
+body .container .main .thirdSection .c .c2-1 .circleBox {
+  width: 100%;
+  position: relative;
+}
+body .container .main .thirdSection .c .c2-1 .circleBox .circle {
+  display: block;
+  width: 12vw;
+  height: 12vw;
+  margin: auto;
+}
+body .container .main .thirdSection .c .c2-1 .circleBox .circleperTitle {
+  position: absolute;
+  top: 1vw;
+  left: 4vw;
+  font-size: 1vw;
+  font-weight: bold;
+  font-family: "Nanum Gothic", serif;
+}
+body .container .main .thirdSection .c .c2-1 .circleBox .circleper {
+  position: absolute;
+  top: 6vw;
+  left: 4.3vw;
+  font-size: 2vw;
+  font-weight: bold;
+  text-shadow: 10px 10px 10px #1C1B20;
+  font-family: "Nanum Gothic", serif;
+}
 body .container .main .thirdSection .c1 {
   width: 100%;
   height: 30%;
   background-color: #303136;
   border-radius: 20px;
+  padding: 30px;
+  box-sizing: border-box;
+}
+body .container .main .thirdSection .c1 .canvas {
+  border-radius: 20px;
+  margin: auto;
+  display: block;
 }
 body .container .main .thirdSection .c2 {
   width: 100%;
