--- a/weatherProject/src/App.scss
+++ b/weatherProject/src/App.scss
@@ -221,6 +221,7 @@ body {
                     height: 63%;
                     margin: 0 auto;
                     @include objcolor();
+                    background-color: #1C1B20;
                     overflow: hidden;
                     // background: linear-gradient(#bdc5cc, #0185f8);
 
@@ -232,8 +233,8 @@ body {
                         height: 100%;
 
                         .koreaMap {
-                            stroke: rgb(87, 84, 84);
-                            fill: #cfcdc6;
+                            stroke: rgb(159, 255, 171);
+                            fill: #ffffff;
                         }
 
                         .koreaMap:hover {
@@ -267,7 +268,7 @@ body {
 
                 .c {
                     width: 100%;
-                    height: 30%;
+                    height: 13vw;
                     // background-color: #fff;
                     display: flex;
                     justify-content: space-between;
@@ -276,6 +277,42 @@ body {
                         width: 32%;
                         background-color: black;
                         @include objcolor();
+
+                        .circleBox {
+                            width: 100%;
+                            position: relative;
+
+
+                            .circle {
+                                display: block;
+                                width: 12vw;
+                                height: 12vw;
+                                margin: auto;
+
+
+
+                            }
+
+                            .circleperTitle {
+                                position: absolute;
+                                top: 1vw;
+                                left: 4vw;
+                                font-size: 1vw;
+                                font-weight: bold;
+                                font-family: "Nanum Gothic", serif;
+
+                            }
+
+                            .circleper {
+                                position: absolute;
+                                top: 6vw;
+                                left: 4.3vw;
+                                font-size: 2vw;
+                                font-weight: bold;
+                                text-shadow: 10px 10px 10px #1C1B20;
+                                font-family: "Nanum Gothic", serif;
+                            }
+                        }
                     }
                 }
 
@@ -283,6 +320,16 @@ body {
                     width: 100%;
                     height: 30%;
                     @include objcolor();
+                    padding: 30px;
+                    box-sizing: border-box;
+
+                    .canvas {
+                        border-radius: 20px;
+                        margin: auto;
+                        display: block;
+                    }
+
+
 
                 }
 
