--- a/weatherProject/src/App.scss
+++ b/weatherProject/src/App.scss
@@ -203,6 +203,8 @@ body {
                     margin: 0 auto;
                     border-radius: 20px;
                     background-color: #fff;
+                    background: linear-gradient(#bdc5cc, #0185f8);
+
                     background: linear-gradient(#ccc8bd, #ffab04, #ff8604);
                     box-sizing: border-box;
                     padding: 2vw;
@@ -384,9 +386,10 @@ body {
 
                     }
 
-                    .canvas {
+                    .temperatureGraph {
                         position: absolute;
                         top: 2vw;
+                        left: 0;
                         border-radius: 20px;
                         margin: auto;
                         display: block;
